<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/submain"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/loginTitleImage"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            app:srcCompat="@drawable/spider_maroon" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/black_ops_one"
            android:text="ARACHNOPHOBIA: GALAXY INFESTATION"
            android:textAlignment="center"
            android:textColor="#009688"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/black_ops_one"
            android:text="@string/settingstext"
            android:textAlignment="center"
            android:textColor="#009688"
            android:textSize="24sp"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/languageLayout"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/languageText"
                android:layout_width="241dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/black_ops_one"
                android:text="@string/languagetext"
                android:textColor="#009688"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/languagespinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:spinnerMode="dropdown"
                android:padding="8dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/biometricsLayout"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/bioswitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/black_ops_one"
                android:text="@string/bioswitchtext"
                android:textColor="#009688"
                android:textSize="20sp"
                android:textStyle="bold"
                android:thumbTint="#3F51B5"
                android:trackTint="#3F51B5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/musicvolumeLayout"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/musicvolumeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/black_ops_one"
                android:text="@string/musictext"
                android:textColor="#009688"
                android:textSize="20sp" />

            <com.google.android.material.slider.Slider
                android:id="@+id/musicvolumeSlider"
                android:layout_width="125dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/effectsvolumeLayout"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/effectsvolumeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/black_ops_one"
                android:text="@string/effectstext"
                android:textColor="#009688"
                android:textSize="20sp" />

            <com.google.android.material.slider.Slider
                android:id="@+id/effectsvolumeSlider"
                android:layout_width="125dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/btnsavesettings"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/black_ops_one"
            android:text="@string/btnsavesettings" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>