<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/submain"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/loginTitleImage"
            android:layout_width="match_parent"
            android:layout_height="178dp"
            app:srcCompat="@drawable/spider_blue_wallpaper" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/black_ops_one"
            android:text="ARACHNOPHOBIA: GALAXY INFESTATION"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usernameview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="@font/black_ops_one"
                android:text="Guest"
                android:textColor="@color/buttonBackground2"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_horizontal|top"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/user_icon" />
        </LinearLayout>

        <Button
            android:id="@+id/btnarcademode"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ripple_effect"
            android:backgroundTint="@color/buttonBackground"
            android:fontFamily="@font/black_ops_one"
            android:text="ARCADE MODE"
            android:textColor="@color/buttonText" />

        <Button
            android:id="@+id/btnsurvivalmode"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ripple_effect"
            android:backgroundTint="@color/buttonBackground"
            android:fontFamily="@font/black_ops_one"
            android:text="SURVIVAL MODE"
            android:textColor="@color/buttonText" />

        <Button
            android:id="@+id/btnhighscores"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ripple_effect"
            android:backgroundTint="@color/buttonBackground"
            android:fontFamily="@font/black_ops_one"
            android:text="@string/btnleaderboards"
            android:textColor="@color/buttonText" />

        <Button
            android:id="@+id/btntrophies"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ripple_effect"
            android:backgroundTint="@color/buttonBackground"
            android:fontFamily="@font/black_ops_one"
            android:text="@string/btntrophies"
            android:textColor="@color/buttonText" />

        <Button
            android:id="@+id/btnsettings"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ripple_effect"
            android:backgroundTint="@color/buttonBackground"
            android:fontFamily="@font/black_ops_one"
            android:text="@string/btnsettings"
            android:textColor="@color/buttonText" />

        <Button
            android:id="@+id/btnexit"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ripple_effect"
            android:backgroundTint="@color/buttonBackground"
            android:fontFamily="@font/black_ops_one"
            android:text="@string/btnexit"
            android:textColor="@color/buttonText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>